--- a/tutorial/6 Profile Knowledge Graph.ipynb
+++ b/tutorial/6 Profile Knowledge Graph.ipynb
@@ -56,7 +56,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": false,
     "tags": [
      "parameters"
     ]
@@ -84,9 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is there so that it can be passed via papermill parameters\n",
@@ -104,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import io\n",
@@ -139,9 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -160,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# path to folder which contains all files corresponding to the wikidata subset. \n",
@@ -273,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Variable storing all the datatypes of a properties\n",
@@ -298,9 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "types_with_fileName = [\n",
@@ -342,9 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Deleting any files in the output folder\n",
@@ -357,9 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "FNULL = open(os.devnull, 'w')\n",
@@ -382,9 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "FNULL = open(os.devnull, 'w')\n",
@@ -430,9 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This function is used to print the string in different font, colors and font-size.\n",
@@ -461,9 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# It returns the label of the qnode but uses wikidata sparql endpoint, Can only be used when KG is a subgraph from wikidata\n",
@@ -495,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_label(qnode):\n",
@@ -549,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def Capitalize(String_item):\n",
@@ -567,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This function display the top units for the property of datatype:quantity\n",
@@ -744,9 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This function displays the stacked histogram for the distribution of instances of the property (property must be of time data type)\n",
@@ -981,9 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This function displays the  histogram for the distribution of instances of the property (property must be of time data type)\n",
@@ -1050,9 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This function displays the overview of the property\n",
@@ -1155,9 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This is a helper function which extract the qnode/pnode from the link\n",
@@ -1168,9 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Find labels of all the properties of the class\n",
@@ -1236,9 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is a helper function which finds the statistics on the outcoming properties on the instances of the class\n",
@@ -1301,9 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is a helper function which finds the statistics on the incoming properties on the instances of the class\n",
@@ -1370,9 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This function gives the overview of a property \n",
@@ -1564,9 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1709,9 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1816,9 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1948,9 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3126,9 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#This is a helper function which extract the qnode/pnode from the link\n",
@@ -3139,9 +3084,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4745,9 +4688,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4915,9 +4856,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5588,9 +5527,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5954,9 +5891,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6137,9 +6072,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -7281,9 +7214,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9044,9 +8975,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9191,9 +9120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#class_overview(\"Q483501\",\"artist\")"
@@ -9202,9 +9129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#class_overview(\"Q483501\",\"artist\",number_of_outgoing_properties=3)"
@@ -9234,9 +9159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#property_overview(\"P619\",\"space_craft_launch_time\",\"time\")"
@@ -9253,9 +9176,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9380,9 +9301,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9507,9 +9426,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9627,9 +9544,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9754,9 +9669,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9881,9 +9794,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10071,9 +9982,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10248,9 +10157,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10454,9 +10361,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10780,9 +10685,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10802,9 +10705,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -11138,9 +11039,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -12184,9 +12083,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base')",
+   "display_name": "kgtk-env",
    "language": "python",
-   "name": "python37464bitbase93a1b6493da14347a91dee6b82fcd658"
+   "name": "kgtk-env"
   },
   "language_info": {
    "codemirror_mode": {
