clean profiler notebook, call profiler in Enhance KG notebook

--- a/tutorial/3 Enhance KG.ipynb
+++ b/tutorial/3 Enhance KG.ipynb
@@ -48,6 +48,7 @@
       "STORE: \"/Users/amandeep/Documents/kypher/temp.wikidata_os_v5/wikidata.sqlite3.db\"\n",
       "TE: \"/Users/amandeep/Documents/kypher/temp.wikidata_os_v5/text-embedding\"\n",
       "TEMP: \"/Users/amandeep/Documents/kypher/temp.wikidata_os_v5\"\n",
+      "USECASE_DIR: \"/Users/amandeep/Github/kgtk/use-cases\"\n",
       "WIKIDATA: \"/Volumes/GoogleDrive/Shared drives/KGTK/datasets/wikidataos-v4/\"\n",
       "kgtk: \"time kgtk --debug\"\n",
       "kypher: \"kgtk query --graph-cache /Users/amandeep/Documents/kypher/temp.wikidata_os_v5/wikidata.sqlite3.db\"\n"
@@ -1042,6 +1043,95 @@
     "--match '(n1)-[]->()' \\\n",
     "--return 'count(distinct n1)'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7 Run the Knowledge Graph Profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/amandeep/Github/kgtk/use-cases/Knowledge-Graph-Profiler.ipynb\n",
+      "/Users/amandeep/Documents/kypher/wikidata_os_v5/parts\n",
+      "/Users/amandeep/Documents/kypher/temp.wikidata_os_v5/profiler_temp\n",
+      "/Users/amandeep/Documents/kypher/wikidata_os_v5/profiler\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.environ[\"USECASE_DIR\"] + \"/Knowledge-Graph-Profiler.ipynb\")\n",
+    "print(os.environ[\"OUT\"] + \"/parts\")\n",
+    "print(os.environ['TEMP'] + \"/profiler_temp\")\n",
+    "print(os.environ[\"OUT\"] + \"/profiler\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46960c5b3df04d2e9e6706a9eeb1990f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Executing:   0%|          | 0/76 [00:00<?, ?cell/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the ; at the end suppresses the output of this cell which is a very large json object output of executing the profiler notebook\n",
+    "pm.execute_notebook(\n",
+    "    os.environ[\"USECASE_DIR\"] + \"/Knowledge-Graph-Profiler.ipynb\",\n",
+    "    os.environ[\"TEMP\"] + \"/Knowledge-Graph-Profiler.out.ipynb\",\n",
+    "    parameters=dict(\n",
+    "        wikidata_parts_folder = os.environ[\"OUT\"] + \"/parts\",\n",
+    "        cache_folder = os.environ['TEMP'] + \"/profiler_temp\",\n",
+    "        output_folder = os.environ[\"OUT\"] + \"/profiler\",\n",
+    "        compute_graph_statistics = \"true\"\n",
+    "    )\n",
+    ")\n",
+    ";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do something with the profiler output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
